packages/frontend/src/features/ai-chat/ai-chat.component.scss
:host {
  --header-height: 57.6px;
  display: flex;
  flex-direction: column;
  align-items: center;

  width: 100%;
  height: calc(100% - var(--header-height));
}

.chat-form,
.dialogue-window,
.greeting {
  width: 100%;
  max-width: 714px;
}

.greeting {
  display: block;
  margin-top: 33px;
}

.chat-form {
  display: block;
  margin-bottom: 65px;
}

.dialogue-window {
  overflow-y: scroll;
  flex: 1;
  margin-top: 8px;
  margin-bottom: 24px;
}

.title {
  margin-bottom: 40px;
}

